Add .msh export option and tetrahedron quality checks
- Integrates mshio for mesh export, including new CMake integration and mesh writing in general_sweep.cpp.
- Adds time scalar field to the .msh output. TimeMap utilities for per-vertex time labeling, BFS label propagation, and backfilling.
- Introduces tet_quality module for tetrahedron radius ratio calculation, and updates grid refinement to use this quality metric. Updates related headers and build files accordingly.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -45,6 +45,7 @@ include(nlohmann-json)
 include(nanothread)
 include(mtet)
 include(mtetcol)
+include(mshio)
 include(unordered_dense)
 include(smallvector)
 include(libigl)
@@ -65,6 +66,7 @@ target_link_libraries(adaptive_column_grid
     Eigen3::Eigen
     mtet::mtet 
     mtetcol::mtetcol
+    mshio::mshio
     nanothread::nanothread
     nlohmann_json::nlohmann_json
     smallvector::smallvector
